mep des balises meta + linking css/js + ajout de la base du body

--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <title>Com'moi</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="But du site">
+        <meta name="keywords" content="Mots clés pour le site">
+        <meta name="author" content="Com'Moi">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <link rel="icon" href="img/favicon.png">
+        <link href="css/main.css">
+        
+        <script type="text/javascript" src="js/script.js"></script>
 
-<h1>Titre</h1>
-<p>Paragraphe.</p>
+        <title>Com'Moi</title>
+    </head>
+    <body>
+        <!-- header -->
+        <header>
 
-</body>
+        </header>
+        <!-- main -->
+        <h1>Titre</h1>
+        <p>Paragraphe.</p>
+
+        <!-- footer -->
+        <footer>
+
+        </footer>
+        <!-- scripts js -->
+        <script type="text/javascript">
+        </script>
+    </body>
 </html>
