intégration wireframe footer

--- a/index.html
+++ b/index.html
@@ -43,7 +43,34 @@
         </main>
         <!-- footer -->
         <footer>
-
+            <div class="footer-content d-flex">
+                <section class="footer-information">
+                    <h3>Informations</h3>
+                    <ul>
+                        <li>Pour les étudiants</li>
+                        <li>Pour les lycées</li>
+                        <li>Newsletter</li>
+                    </ul>
+                </section>
+                <section class="footer-contact">
+                    <h3>Contact</h3>
+                    <ul>
+                        <li>8 bis Rue de la Fontaine au Roi<br>75011 Paris</li>
+                        <li><a href="tel:0678989910">06 78 98 99 10</a></li>
+                        <li><a href="mailto:contact@declic.fr">contact@declic.fr</a></li>
+                    </ul>
+                </section>
+                <section class="footer-social-media">
+                    <h3>Social Media</h3>
+                    <ul class="d-flex">
+                        <li>F</li>
+                        <li>T</li>
+                        <li>L</li>
+                        <li>P</li>
+                    </ul>
+                </section>
+            </div>
+            <p class="copyright">© 2021 com'moi - tous droits réservés</p>
         </footer>
         <!-- scripts js -->
         <script type="text/javascript">
