--- a/index.html
+++ b/index.html
@@ -34,18 +34,79 @@
                 <a class="cta" href="#">S'abonner</a>
                 <a class="more" href="">En savoir plus</a>
             </div>
-            
-        </header class="">
+        </header>
         <!-- main -->
         <main>
-            <h1>Titre</h1>
-            <p>Paragraphe.</p>
+            <div class="main-item first">
+                <section class="avantages d-flex">
+                    <div class="demo-illustration d-flex"><span>Visuel</span></div>
+                    <article>
+                        <h2>Lycéen ! Déclic t'informe</h2>
+                        <h3>Les avantages de l'entrepreneuriat n'auront plus de secret pour toi.</h3>
+                        <p>Parce que travailler c'est aussi concrétiser un projet et vivre de sa pasison, Déclic t'accompagne à toutes les étapes.</p>
+                    </article>
+                </section>
+                <section class="valeurs d-flex flex-column">
+                    <h2>Les valeurs que l'on porte</h2>
+                    <div class="valeurs-cartes d-flex">
+                        <section class="information d-flex flex-column">
+                            <!-- <img alt="" src=""> -->
+                            <div class="demo-rond"></div>
+                            <h3>Information</h3>
+                            <p>Tu veux découvrir l'entrepreneuriat ?</p>
+                            <div class="separateur"></div>
+                            <p>On est là pour toi !</p>
+                        </section>
+                        <section class="valorisation d-flex flex-column">
+                            <!-- <img alt="" src=""> -->
+                            <div class="demo-rond"></div>
+                            <h3>Valorisation</h3>
+                            <p>Ton projet a une valeur à tes yeux ?</p>
+                            <div class="separateur"></div>
+                            <p>Pour nous aussi !</p>
+                        </section>
+                        <section class="accompagnement d-flex flex-column">
+                            <!-- <img alt="" src=""> -->
+                            <div class="demo-rond"></div>
+                            <h3>Accompagnement</h3>
+                            <p>Raconte-nous ton projet.</p>
+                            <div class="separateur"></div>
+                            <p>On veut participer !</p>
+                        </section>
+                    </div>
+                </section>
+                <section class="etablissement d-flex flex-column">
+                    <h2>Pour les établissements scolaires :</h2>
+                    <h3>Vos étudiants ont besoin de votre soutien pour leur épanouissement personnel et professionnel !</h3>
+                    <p>Vous êtes un établissement scolaire et vous souhaitez transmettre les valeurs de l'entrepreneuriat auprès de vos lycéens, prenez contact avec l'APEF. (Association de Promotion de l'Entrepreneuriat Français)</p>
+                    <a class="cta" href="#">Contactez-nous</a>
+                </section>
+                <div class="triangles d-flex">
+                    <div class="t1"></div>
+                    <div class="t2"></div>
+                </div>
+            </div>
+            <div class="main-item second d-flex flex-column">
+                <!-- <video></video> -->
+                <div class="demo-video d-flex">
+                    <span>Video</span>
+                </div>
+                <h2> N'en perdez pas une miette, abonnez-vous</h2>
+                <div class="formulaire d-flex flex-column">
+                    <!-- <img alt="" src=""> -->
+                    <div class="demo-illustration d-flex"><span>Illustration</span></div>
+                    <form class="d-flex">
+                        <input type="email" id="email" placeholder="elon@spacex.com" size="30" required>
+                        <input type="submit" id="newsletter-submit" value="Envoyer">
+                    </form>
+                </div>
+            </div>
         </main>
         <!-- footer -->
         <footer>
             <div class="footer-content d-flex">
                 <section class="footer-information">
-                    <h3>Informations</h3>
+                    <h2>Informations</h2>
                     <ul>
                         <li>Pour les étudiants</li>
                         <li>Pour les lycées</li>
@@ -53,15 +114,15 @@
                     </ul>
                 </section>
                 <section class="footer-contact">
-                    <h3>Contact</h3>
+                    <h2>Contact</h2>
                     <ul>
-                        <li>8 bis Rue de la Fontaine au Roi<br>75011 Paris</li>
+                        <li>8 bis Rue de la Fontaine au Roi 75011 Paris</li>
                         <li><a href="tel:0678989910">06 78 98 99 10</a></li>
                         <li><a href="mailto:contact@declic.fr">contact@declic.fr</a></li>
                     </ul>
                 </section>
                 <section class="footer-social-media">
-                    <h3>Social Media</h3>
+                    <h2>Social Media</h2>
                     <ul class="d-flex">
                         <li>F</li>
                         <li>T</li>
