maj landing version maquette

--- a/index.html
+++ b/index.html
@@ -12,14 +12,24 @@
         
         <script type="text/javascript" src="js/script.js"></script>
 
-        <title>Com'Moi</title>
+        <title>Déclic</title>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-X3YHM63MPV%22%3E"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            
+            gtag('config', 'G-X3YHM63MPV');
+        </script>
     </head>
     <body>
         <!-- header -->
         <header>
             <nav class="d-flex space-between">
-                <!-- <img alt="declic-logo" src=""> -->
-                <p class="demo-logo">Logo</p>
+                <a href="#" class="nav-logo"><img alt="logo-declic" src="img/logo-declic.png"></a>
+                <!-- <p class="demo-logo">Logo</p> -->
                 <div class="d-flex">
                     <ul>
                         <li><a href="#">Pour les étudiants</a></li>
@@ -30,8 +40,8 @@
             </nav>
             <div class="d-flex flex-column header-bg">
                 <span class="demo-illustration">Illustration</span>
-                <h1>Déclic en un clic</h1>
-                <a class="cta" href="#">S'abonner</a>
+                <h1>Déclic le premier dispositif qui encourage les étudiants à entreprendre</h1>
+                <a class="cta cta-violet" href="#">S'abonner</a>
                 <a class="more" href="">En savoir plus</a>
             </div>
         </header>
@@ -123,12 +133,11 @@
                 </section>
                 <section class="footer-social-media">
                     <h2>Social Media</h2>
-                    <ul class="d-flex">
-                        <li>F</li>
-                        <li>T</li>
-                        <li>L</li>
-                        <li>P</li>
-                    </ul>
+                    <div class="d-flex">
+                        <a href=""><img alt="" src="img/facebook.png"></a>
+                        <a href=""><img alt="" src="img/instagram.png"></a>
+                        <a href=""><img alt="" src="img/tiktok.png"></a>
+                    </div>
                 </section>
             </div>
             <p class="copyright">© 2021 com'moi - tous droits réservés</p>
