maj ui header + form newsletter

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                 </div>
             </nav>
             <div class="d-flex flex-column header-bg">
-                <span class="demo-illustration">Illustration</span>
                 <h1>Déclic le premier dispositif qui encourage les étudiants à entreprendre</h1>
                 <a class="cta cta-violet" href="#">S'abonner</a>
                 <a class="more" href="">En savoir plus</a>
@@ -87,7 +86,7 @@
                 </section>
                 <section class="etablissement d-flex flex-column">
                     <h2>Pour les établissements scolaires :</h2>
-                    <h3>Vos étudiants ont besoin de votre soutien pour leur épanouissement personnel et professionnel !</h3>
+                    <span class="sous-titre">Vos étudiants ont besoin de votre soutien pour leur épanouissement personnel et professionnel !</span>
                     <p>Vous êtes un établissement scolaire et vous souhaitez transmettre les valeurs de l'entrepreneuriat auprès de vos lycéens, prenez contact avec l'APEF. (Association de Promotion de l'Entrepreneuriat Français)</p>
                     <a class="cta" href="#">Contactez-nous</a>
                 </section>
@@ -103,8 +102,8 @@
                 </div>
                 <h2> N'en perdez pas une miette, abonnez-vous</h2>
                 <div class="formulaire d-flex flex-column">
-                    <!-- <img alt="" src=""> -->
-                    <div class="demo-illustration d-flex"><span>Illustration</span></div>
+                    <img alt="" src="img/illust_persocomputer.png">
+                    <!-- <div class="demo-illustration d-flex"><span>Illustration</span></div> -->
                     <form class="d-flex">
                         <input type="email" id="email" placeholder="elon@spacex.com" size="30" required>
                         <input type="submit" id="newsletter-submit" value="Envoyer">
