maj ui main content

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <section class="avantages d-flex">
                     <div class="demo-illustration d-flex"><span>Visuel</span></div>
                     <article>
-                        <h2>Lycéen ! Déclic t'informe</h2>
+                        <h2>Lycéen&nbsp;! Déclic t'informe</h2>
                         <h3>Les avantages de l'entrepreneuriat n'auront plus de secret pour toi.</h3>
                         <p>Parce que travailler c'est aussi concrétiser un projet et vivre de sa pasison, Déclic t'accompagne à toutes les étapes.</p>
                     </article>
@@ -59,41 +59,34 @@
                     <h2>Les valeurs que l'on porte</h2>
                     <div class="valeurs-cartes d-flex">
                         <section class="information d-flex flex-column">
-                            <!-- <img alt="" src=""> -->
-                            <div class="demo-rond"></div>
+                            <img alt="" src="img/icon-information.png">
                             <h3>Information</h3>
-                            <p>Tu veux découvrir l'entrepreneuriat ?</p>
+                            <p>Tu veux découvrir l'entrepreneuriat&nbsp;?</p>
                             <div class="separateur"></div>
-                            <p>On est là pour toi !</p>
+                            <p>On est là pour toi&nbsp;!</p>
                         </section>
                         <section class="valorisation d-flex flex-column">
-                            <!-- <img alt="" src=""> -->
-                            <div class="demo-rond"></div>
+                            <img alt="" src="img/icon-valorisation.png">
                             <h3>Valorisation</h3>
-                            <p>Ton projet a une valeur à tes yeux ?</p>
+                            <p>Ton projet a une valeur à tes yeux&nbsp;?</p>
                             <div class="separateur"></div>
-                            <p>Pour nous aussi !</p>
+                            <p>Pour nous aussi&nbsp;!</p>
                         </section>
                         <section class="accompagnement d-flex flex-column">
-                            <!-- <img alt="" src=""> -->
-                            <div class="demo-rond"></div>
+                            <img alt="" src="img/icon-accompagnement.png">
                             <h3>Accompagnement</h3>
                             <p>Raconte-nous ton projet.</p>
                             <div class="separateur"></div>
-                            <p>On veut participer !</p>
+                            <p>On veut participer&nbsp;!</p>
                         </section>
                     </div>
                 </section>
                 <section class="etablissement d-flex flex-column">
-                    <h2>Pour les établissements scolaires :</h2>
-                    <span class="sous-titre">Vos étudiants ont besoin de votre soutien pour leur épanouissement personnel et professionnel !</span>
+                    <h2>Pour les établissements scolaires&nbsp;:</h2>
+                    <span class="sous-titre">Vos étudiants ont besoin de votre soutien pour leur épanouissement personnel et professionnel&nbsp;!</span>
                     <p>Vous êtes un établissement scolaire et vous souhaitez transmettre les valeurs de l'entrepreneuriat auprès de vos lycéens, prenez contact avec l'APEF. (Association de Promotion de l'Entrepreneuriat Français)</p>
                     <a class="cta" href="#">Contactez-nous</a>
                 </section>
-                <div class="triangles d-flex">
-                    <div class="t1"></div>
-                    <div class="t2"></div>
-                </div>
             </div>
             <div class="main-item second d-flex flex-column">
                 <!-- <video></video> -->
