maj ui complete main content

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <main>
             <div class="main-item first">
                 <section class="avantages d-flex">
-                    <div class="demo-illustration d-flex"><span>Visuel</span></div>
+                    <img alt="" src="img/declic-jeunes.jpeg">
                     <article>
                         <h2>Lycéen&nbsp;! Déclic t'informe</h2>
-                        <h3>Les avantages de l'entrepreneuriat n'auront plus de secret pour toi.</h3>
+                        <span class="sous-titre">Les avantages de l'entrepreneuriat n'auront plus de secret pour toi.</span>
                         <p>Parce que travailler c'est aussi concrétiser un projet et vivre de sa pasison, Déclic t'accompagne à toutes les étapes.</p>
                     </article>
                 </section>
@@ -90,9 +90,7 @@
             </div>
             <div class="main-item second d-flex flex-column">
                 <!-- <video></video> -->
-                <div class="demo-video d-flex">
-                    <span>Video</span>
-                </div>
+                <div class="demo-video d-flex"></div>
                 <h2> N'en perdez pas une miette, abonnez-vous</h2>
                 <div class="formulaire d-flex flex-column">
                     <img alt="" src="img/illust_persocomputer.png">
@@ -105,7 +103,7 @@
             </div>
         </main>
         <!-- footer -->
-        <footer>
+        <footer class="d-flex flex-column">
             <div class="footer-content d-flex">
                 <section class="footer-information">
                     <h2>Informations</h2>
