--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                 <section class="footer-social-media">
                     <h2>Social Media</h2>
                     <div class="d-flex">
-                        <a href=""><img alt="" src="img/facebook.png"></a>
-                        <a href=""><img alt="" src="img/instagram.png"></a>
-                        <a href=""><img alt="" src="img/tiktok.png"></a>
+                        <a href="https://www.facebook.com/profile.php?id=100075083631228" target="_blank"><img alt="" src="img/facebook.png"></a>
+                        <a href="https://www.instagram.com/declic.apef/" target="_blank"><img alt="" src="img/instagram.png"></a>
+                        <a href="https://www.tiktok.com/@declic.apef?lang=fr" target="_blank"><img alt="" src="img/tiktok.png"></a>
                     </div>
                 </section>
             </div>
