connexion formulaire mailchimp

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                 <div class="formulaire d-flex flex-column">
                     <img alt="" src="img/illust_persocomputer.png">
                     <!-- <div class="demo-illustration d-flex"><span>Illustration</span></div> -->
-                    <form class="d-flex">
-                        <input type="email" id="email" placeholder="elon@spacex.com" size="30" required>
-                        <input type="submit" id="newsletter-submit" value="Envoyer">
+                    <form  action="https://gmail.us20.list-manage.com/subscribe/post?u=4cbbbdc22db0901fe66449e88&amp;id=b7de80ac0b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="d-flex validate" target="_blank" novalidate>
+                        <input type="email" name="EMAIL" class="email" id="mce-EMAIL" placeholder="elon@spacex.com" required>
+                        <input type="submit" value="Envoyer" name="subscribe" id="mc-embedded-subscribe" class="button">
                     </form>
                 </div>
             </div>
