illustrations passées en SVG + maj liens footer et ajout d'une micro intéraction des menus du footer

--- a/index.html
+++ b/index.html
@@ -108,25 +108,25 @@
                 <section class="footer-information">
                     <h2>Informations</h2>
                     <ul>
-                        <li>Pour les étudiants</li>
-                        <li>Pour les lycées</li>
-                        <li>Newsletter</li>
+                        <li class="d-flex"><a href="#">Pour les étudiants</a></li>
+                        <li class="d-flex"><a href="#">Pour les lycées</a></li>
+                        <li class="d-flex"><a href="#">Newsletter</a></li>
                     </ul>
                 </section>
                 <section class="footer-contact">
                     <h2>Contact</h2>
                     <ul>
-                        <li>8 bis Rue de la Fontaine au Roi 75011 Paris</li>
-                        <li><a href="tel:0678989910">06 78 98 99 10</a></li>
-                        <li><a href="mailto:contact@declic.fr">contact@declic.fr</a></li>
+                        <li class="d-flex"><a href="https://goo.gl/maps/zFTsiY8oXHkMnT629" target="_blank">8 bis Rue de la Fontaine au Roi 75011 Paris</a></li>
+                        <li class="d-flex"><a href="tel:0678989910">06 78 98 99 10</a></li>
+                        <li class="d-flex"><a href="mailto:contact@declic.fr" target="_blank">contact@declic.fr</a></li>
                     </ul>
                 </section>
                 <section class="footer-social-media">
                     <h2>Social Media</h2>
                     <div class="d-flex">
-                        <a href="https://www.facebook.com/profile.php?id=100075083631228" target="_blank"><img alt="" src="img/facebook.png"></a>
-                        <a href="https://www.instagram.com/declic.apef/" target="_blank"><img alt="" src="img/instagram.png"></a>
-                        <a href="https://www.tiktok.com/@declic.apef?lang=fr" target="_blank"><img alt="" src="img/tiktok.png"></a>
+                        <a href="https://www.facebook.com/profile.php?id=100075083631228" target="_blank"><img alt="" src="img/facebook.svg"></a>
+                        <a href="https://www.instagram.com/declic.apef/" target="_blank"><img alt="" src="img/instagram.svg"></a>
+                        <a href="https://www.tiktok.com/@declic.apef?lang=fr" target="_blank"><img alt="" src="img/tiktok.svg"></a>
                     </div>
                 </section>
             </div>
