ajout des illudstrations flottantes

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <body>
         <!-- header -->
         <header>
+            <img alt="" src="img/illust_perso2.png" class="illustration-flottante">
+            <img alt="" src="img/illust_persoassis_1.png" class="illustration-flottante">
             <nav class="d-flex space-between">
                 <a href="#" class="nav-logo"><img alt="logo-declic" src="img/logo-declic.png"></a>
                 <!-- <p class="demo-logo">Logo</p> -->
@@ -47,6 +49,7 @@
         <!-- main -->
         <main>
             <div class="main-item first">
+                <img alt="" src="img/illust_perso_1.png" class="illustration-flottante">
                 <section class="avantages d-flex">
                     <img alt="" src="img/declic-jeunes.jpeg">
                     <article>
@@ -89,6 +92,7 @@
                 </section>
             </div>
             <div class="main-item second d-flex flex-column">
+                <img alt="" src="img/illust_perso_1.png" class="illustration-flottante">
                 <!-- <video></video> -->
                 <div class="demo-video d-flex"></div>
                 <h2> N'en perdez pas une miette, abonnez-vous</h2>
