--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <link rel="icon" href="img/favicon.png">
         <link rel="stylesheet" href="css/main.css">
         
-        <script type="text/javascript" src="js/script.js"></script>
+        <script type="text/javascript">
+            
+        </script>
 
         <title>Déclic</title>
 
@@ -27,9 +29,8 @@
     <body>
         <!-- header -->
         <header>
-            <img alt="" src="img/illust_perso2.png" class="illustration-flottante">
             <img alt="" src="img/illust_persoassis_1.png" class="illustration-flottante">
-            <nav class="d-flex space-between">
+            <nav class="nav-1 d-flex space-between">
                 <a href="#" class="nav-logo"><img alt="logo-declic" src="img/logo-declic.png"></a>
                 <!-- <p class="demo-logo">Logo</p> -->
                 <div class="d-flex">
@@ -39,6 +40,14 @@
                     </ul>
                     <a class="cta-newsletter" href="#">Newsletter</a>
                 </div>
+            </nav>
+            <nav class="nav-2 d-flex">
+                <svg class="burger-off">
+                    <rect/>
+                    <rect/>
+                    <rect/>
+                </svg>
+                <a href="#" class="nav-logo"><img alt="logo-declic" src="img/logo-declic.png"></a>
             </nav>
             <div class="d-flex flex-column header-bg">
                 <h1>Déclic le premier dispositif qui encourage les étudiants à entreprendre</h1>
@@ -93,6 +102,8 @@
             </div>
             <div class="main-item second d-flex flex-column">
                 <img alt="" src="img/illust_perso_1.png" class="illustration-flottante">
+                <img alt="" src="img/illust_perso_1.png" class="illustration-flottante">
+
                 <!-- <video></video> -->
                 <div class="demo-video d-flex"></div>
                 <h2> N'en perdez pas une miette, abonnez-vous</h2>
@@ -137,7 +148,6 @@
             <p class="copyright">© 2021 com'moi - tous droits réservés</p>
         </footer>
         <!-- scripts js -->
-        <script type="text/javascript">
-        </script>
+        <script type="text/javascript" src="js/script.js"></script>
     </body>
 </html>
