css responsive + animation burger + images flottantes

--- a/index.html
+++ b/index.html
@@ -42,13 +42,24 @@
                 </div>
             </nav>
             <nav class="nav-2 d-flex">
-                <svg class="burger-off">
+                <svg class="burger burger-off">
                     <rect/>
                     <rect/>
                     <rect/>
                 </svg>
                 <a href="#" class="nav-logo"><img alt="logo-declic" src="img/logo-declic.png"></a>
+                <svg class="arrow">
+                    <rect x="2" y="6"/>
+                    <rect x="23" y="7"/>
+                </svg>
             </nav>
+            <div class="dropdown d-flex flex-column">
+                <ul class="d-flex flex-column">
+                    <li><a href="#">Pour les étudiants</a></li>
+                    <li><a href="#">Pour les lycées</a></li>
+                </ul>
+                <a class="cta-newsletter" href="#">Newsletter</a>
+            </div>
             <div class="d-flex flex-column header-bg">
                 <h1>Déclic le premier dispositif qui encourage les étudiants à entreprendre</h1>
                 <a class="cta cta-violet" href="#">S'abonner</a>
@@ -99,16 +110,19 @@
                     <p>Vous êtes un établissement scolaire et vous souhaitez transmettre les valeurs de l'entrepreneuriat auprès de vos lycéens, prenez contact avec l'APEF. (Association de Promotion de l'Entrepreneuriat Français)</p>
                     <a class="cta" href="#">Contactez-nous</a>
                 </section>
+                <img alt="" src="img/forme-modules-2.svg" class="illustration-flottante-2">
+                <img alt="" src="img/illust_persoassis2.png" class="illustration-flottante-2">
+                <img alt="" src="img/illust_crayon.png" class="illustration-flottante-2">
+                
             </div>
             <div class="main-item second d-flex flex-column">
-                <img alt="" src="img/illust_perso_1.png" class="illustration-flottante">
-                <img alt="" src="img/illust_perso_1.png" class="illustration-flottante">
-
                 <!-- <video></video> -->
                 <div class="demo-video d-flex"></div>
-                <h2> N'en perdez pas une miette, abonnez-vous</h2>
                 <div class="formulaire d-flex flex-column">
+                    <h2> N'en perdez pas une miette...</h2>
+                    <img alt="" src="img/flecheyellow.png">
                     <img alt="" src="img/illust_persocomputer.png">
+                    <h2> ...et abonnez-vous à la Newsletter</h2>
                     <!-- <div class="demo-illustration d-flex"><span>Illustration</span></div> -->
                     <form  action="https://gmail.us20.list-manage.com/subscribe/post?u=4cbbbdc22db0901fe66449e88&amp;id=b7de80ac0b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="d-flex validate" target="_blank" novalidate>
                         <input type="email" name="EMAIL" class="email" id="mce-EMAIL" placeholder="elon@spacex.com" required>
