ajout bouton s'informer

--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@
                 <img alt="" src="img/illust_perso_1.png" class="illustration-flottante">
                 <section class="avantages d-flex">
                     <img alt="" src="img/declic-jeunes.jpeg">
-                    <article>
+                    <div class="d-flex flex-column">
                         <h2>Lycéen&nbsp;! Déclic t'informe</h2>
                         <span class="sous-titre">Les avantages de l'entrepreneuriat n'auront plus de secret pour toi.</span>
                         <p>Parce que travailler c'est aussi concrétiser un projet et vivre de sa pasison, Déclic t'accompagne à toutes les étapes.</p>
-                    </article>
+                        <a href="" class="cta cta-jaune">s'informer</a>
+                    </div>
                 </section>
                 <section class="valeurs d-flex flex-column">
                     <h2>Les valeurs que l'on porte</h2>
