animation bouton s'informer

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <h2>Lycéen&nbsp;! Déclic t'informe</h2>
                         <span class="sous-titre">Les avantages de l'entrepreneuriat n'auront plus de secret pour toi.</span>
                         <p>Parce que travailler c'est aussi concrétiser un projet et vivre de sa pasison, Déclic t'accompagne à toutes les étapes.</p>
-                        <a href="" class="cta cta-jaune">s'informer</a>
+                        <a href="" class="cta cta-jaune">S'informer</a>
                     </div>
                 </section>
                 <section class="valeurs d-flex flex-column">
