--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <a class="cta-newsletter" href="#">Newsletter</a>
             </div>
             <div class="d-flex flex-column header-bg">
-                <h1>Déclic le premier dispositif qui encourage les étudiants à entreprendre</h1>
+                <h1 class="titre titre-violet">Déclic le premier dispositif qui encourage les étudiants à entreprendre</h1>
                 <a class="cta cta-violet" href="#">S'abonner</a>
                 <a class="more" href="">En savoir plus</a>
             </div>
@@ -73,32 +73,32 @@
                 <section class="avantages d-flex">
                     <img alt="" src="img/declic-jeunes.jpeg">
                     <div class="d-flex flex-column">
-                        <h2>Lycéen&nbsp;! Déclic t'informe</h2>
+                        <h2 class="titre titre-canari">Lycéen&nbsp;! Déclic t'informe</h2>
                         <span class="sous-titre">Les avantages de l'entrepreneuriat n'auront plus de secret pour toi.</span>
                         <p>Parce que travailler c'est aussi concrétiser un projet et vivre de sa pasison, Déclic t'accompagne à toutes les étapes.</p>
                         <a href="" class="cta cta-jaune">S'informer</a>
                     </div>
                 </section>
                 <section class="valeurs d-flex flex-column">
-                    <h2>Les valeurs que l'on porte</h2>
+                    <h2 class="titre titre-violet">Les valeurs que l'on porte</h2>
                     <div class="valeurs-cartes d-flex">
                         <section class="information d-flex flex-column">
                             <img alt="" src="img/icon-information.png">
-                            <h3>Information</h3>
+                            <h3 class="titre titre-violet">Information</h3>
                             <p>Tu veux découvrir l'entrepreneuriat&nbsp;?</p>
                             <div class="separateur"></div>
                             <p>On est là pour toi&nbsp;!</p>
                         </section>
                         <section class="valorisation d-flex flex-column">
                             <img alt="" src="img/icon-valorisation.png">
-                            <h3>Valorisation</h3>
+                            <h3 class="titre titre-violet">Valorisation</h3>
                             <p>Ton projet a une valeur à tes yeux&nbsp;?</p>
                             <div class="separateur"></div>
                             <p>Pour nous aussi&nbsp;!</p>
                         </section>
                         <section class="accompagnement d-flex flex-column">
                             <img alt="" src="img/icon-accompagnement.png">
-                            <h3>Accompagnement</h3>
+                            <h3 class="titre titre-violet">Accompagnement</h3>
                             <p>Raconte-nous ton projet.</p>
                             <div class="separateur"></div>
                             <p>On veut participer&nbsp;!</p>
@@ -106,7 +106,7 @@
                     </div>
                 </section>
                 <section class="etablissement d-flex flex-column">
-                    <h2>Pour les établissements scolaires&nbsp;:</h2>
+                    <h2 class="titre titre-violet">Pour les établissements scolaires&nbsp;:</h2>
                     <span class="sous-titre">Vos étudiants ont besoin de votre soutien pour leur épanouissement personnel et professionnel&nbsp;!</span>
                     <p>Vous êtes un établissement scolaire et vous souhaitez transmettre les valeurs de l'entrepreneuriat auprès de vos lycéens, prenez contact avec l'APEF. (Association de Promotion de l'Entrepreneuriat Français)</p>
                     <a class="cta" href="#">Contactez-nous</a>
@@ -120,10 +120,10 @@
                 <!-- <video></video> -->
                 <div class="demo-video d-flex"></div>
                 <div class="formulaire d-flex flex-column">
-                    <h2> N'en perdez pas une miette...</h2>
+                    <h2 class="titre titre-violet"> N'en perdez pas une miette...</h2>
                     <img alt="" src="img/flecheyellow.png">
                     <img alt="" src="img/illust_persocomputer.png">
-                    <h2> ...et abonnez-vous à la Newsletter</h2>
+                    <h2 class="titre titre-violet"> ...et abonnez-vous à la Newsletter</h2>
                     <!-- <div class="demo-illustration d-flex"><span>Illustration</span></div> -->
                     <form  action="https://gmail.us20.list-manage.com/subscribe/post?u=4cbbbdc22db0901fe66449e88&amp;id=b7de80ac0b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="d-flex validate" target="_blank" novalidate>
                         <input type="email" name="EMAIL" class="email" id="mce-EMAIL" placeholder="elon@spacex.com" required>
@@ -136,7 +136,7 @@
         <footer class="d-flex flex-column">
             <div class="footer-content d-flex">
                 <section class="footer-information">
-                    <h2>Informations</h2>
+                    <h2 class="titre titre-footer">Informations</h2>
                     <ul>
                         <li class="d-flex"><a href="#">Pour les étudiants</a></li>
                         <li class="d-flex"><a href="#">Pour les lycées</a></li>
@@ -144,7 +144,7 @@
                     </ul>
                 </section>
                 <section class="footer-contact">
-                    <h2>Contact</h2>
+                    <h2 class="titre titre-footer">Contact</h2>
                     <ul>
                         <li class="d-flex"><a href="https://goo.gl/maps/zFTsiY8oXHkMnT629" target="_blank">8 bis Rue de la Fontaine au Roi 75011 Paris</a></li>
                         <li class="d-flex"><a href="tel:0678989910">06 78 98 99 10</a></li>
@@ -152,7 +152,7 @@
                     </ul>
                 </section>
                 <section class="footer-social-media">
-                    <h2>Social Media</h2>
+                    <h2 class="titre titre-footer">Social Media</h2>
                     <div class="d-flex">
                         <a href="https://www.facebook.com/profile.php?id=100075083631228" target="_blank"><img alt="" src="img/facebook.svg"></a>
                         <a href="https://www.instagram.com/declic.apef/" target="_blank"><img alt="" src="img/instagram.svg"></a>
