changement du texte

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                 <!-- <p class="demo-logo">Logo</p> -->
                 <div class="d-flex">
                     <ul>
-                        <li><a href="#">Pour les étudiants</a></li>
-                        <li><a href="#">Pour les lycées</a></li>
+                        <li><a href="#">Pour les lycéens</a></li>
+                        <li><a href="#">L'entrepreneuriat</a></li>
+                        <li><a href="#">Pour les établissements</a></li>
                     </ul>
                     <a class="cta-newsletter" href="#">Newsletter</a>
                 </div>
@@ -61,9 +62,9 @@
                 <a class="cta-newsletter" href="#">Newsletter</a>
             </div>
             <div class="d-flex flex-column header-bg">
-                <h1 class="titre titre-violet">Déclic le premier dispositif qui encourage les étudiants à entreprendre</h1>
-                <a class="cta cta-violet" href="#">S'abonner</a>
-                <a class="more" href="">En savoir plus</a>
+                <h1 class="titre titre-violet">Rejoins Déclic et trouves ton chemin</h1>
+                <a class="cta cta-violet" href="#">Abonne-toi</a>
+                <a class="more" href="">Viens te renseigner</a>
             </div>
         </header>
         <!-- main -->
@@ -74,41 +75,46 @@
                     <img alt="" src="img/declic-jeunes.jpeg">
                     <div class="d-flex flex-column">
                         <h2 class="titre titre-canari">Lycéen&nbsp;! Déclic t'informe</h2>
-                        <span class="sous-titre">Les avantages de l'entrepreneuriat n'auront plus de secret pour toi.</span>
-                        <p>Parce que travailler c'est aussi concrétiser un projet et vivre de sa pasison, Déclic t'accompagne à toutes les étapes.</p>
-                        <a href="" class="cta cta-jaune">S'informer</a>
+                        <span class="sous-titre">Avec Déclic, y'a plus de secrets. Découvre les avantages de montrer ta boîte.</span>
+                        <p>Taffer c'est pas juste gratter du papier, c'est aussi avoir ton propre plan et kiffer. Rejoins Déclic pour savoir comment y arriver !</p>
+                        <!--<a href="#" class="cta cta-jaune">S'informer</a>-->
                     </div>
                 </section>
                 <section class="valeurs d-flex flex-column">
-                    <h2 class="titre titre-violet">Les valeurs que l'on porte</h2>
+                    <h2 class="titre titre-violet">On a quoi de plus&nbsp;?</h2>
                     <div class="valeurs-cartes d-flex">
                         <section class="information d-flex flex-column">
                             <img alt="" src="img/icon-information.png">
                             <h3 class="titre titre-violet">Information</h3>
-                            <p>Tu veux découvrir l'entrepreneuriat&nbsp;?</p>
+                            <p>Tu veux savoir comment monter te boîte&nbsp;?</p>
                             <div class="separateur"></div>
                             <p>On est là pour toi&nbsp;!</p>
                         </section>
                         <section class="valorisation d-flex flex-column">
                             <img alt="" src="img/icon-valorisation.png">
                             <h3 class="titre titre-violet">Valorisation</h3>
-                            <p>Ton projet a une valeur à tes yeux&nbsp;?</p>
+                            <p>Ton projet a une importance à tes yeux&nbsp;?</p>
                             <div class="separateur"></div>
                             <p>Pour nous aussi&nbsp;!</p>
                         </section>
                         <section class="accompagnement d-flex flex-column">
                             <img alt="" src="img/icon-accompagnement.png">
                             <h3 class="titre titre-violet">Accompagnement</h3>
-                            <p>Raconte-nous ton projet.</p>
+                            <p>Raconte-nous tes rêves les plus fous</p>
                             <div class="separateur"></div>
-                            <p>On veut participer&nbsp;!</p>
+                            <p>On veut y participer&nbsp;!</p>
                         </section>
                     </div>
                 </section>
+
+                <!-- METTRE LA VIDEO ICI !!! -->
+                <!-- <video></video> -->
+
                 <section class="etablissement d-flex flex-column">
-                    <h2 class="titre titre-violet">Pour les établissements scolaires&nbsp;:</h2>
-                    <span class="sous-titre">Vos étudiants ont besoin de votre soutien pour leur épanouissement personnel et professionnel&nbsp;!</span>
-                    <p>Vous êtes un établissement scolaire et vous souhaitez transmettre les valeurs de l'entrepreneuriat auprès de vos lycéens, prenez contact avec l'APEF. (Association de Promotion de l'Entrepreneuriat Français)</p>
+                    <h2 class="titre titre-violet">Vos étudiants ont besoin de votre soutien pour leur épanouissement personnel et professionnel&nbsp;!&nbsp;!</h2>
+                    <p>Vous êtes un établissement scolaire et vous souhaitez transmettre les valeurs de l'entrepreneuriat auprès de vos lycéens,</p>
+                    <p>Prenez contact avec l'APEF. (Association de Promotion de l'Entrepreneuriat Français)</p>
+                    <p></p>
                     <a class="cta" href="#">Contactez-nous</a>
                 </section>
                 <img alt="" src="img/forme-modules-2.svg" class="illustration-flottante-2">
@@ -117,10 +123,9 @@
                 
             </div>
             <div class="main-item second d-flex flex-column">
-                <!-- <video></video> -->
                 <div class="demo-video d-flex"></div>
                 <div class="formulaire d-flex flex-column">
-                    <h2 class="titre titre-violet"> N'en perdez pas une miette...</h2>
+                    <h2 class="titre titre-violet"> N'en perds pas une miette, abonne-toi</h2>
                     <img alt="" src="img/flecheyellow.png">
                     <img alt="" src="img/illust_persocomputer.png">
                     <h2 class="titre titre-violet"> ...et abonnez-vous à la Newsletter</h2>
