correction guillemets français de l'Even onclick sur les logos TikTok jaunes

--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                             <p>Tu veux savoir comment monter ta boîte&nbsp;?</p>
                             <div class="separateur"></div>
                             <p>On est là pour toi&nbsp;!</p>
-                            <img class="tiktok" alt="" src="img/tiktok_purple.svg"
-                                onclick="window.open('https://vm.tiktok.com/ZM8WaLA4T/')">
-                            <img class="tiktok" alt="" src="img/tiktok_yellow.svg"
-                                onclick="window.open('https://vm.tiktok.com/ZM8WaLA4T/')">
+                            <img class="tiktok" alt="logo_tiktok" src="img/tiktok_purple.svg"
+                                onclick="window.open(`https://vm.tiktok.com/ZM8WaLA4T/`)">
+                            <img class="tiktok" alt="logo_tiktok" src="img/tiktok_yellow.svg"
+                                onclick="window.open(`https://vm.tiktok.com/ZM8WaLA4T/`)">
                         </section>
                         <section class="valorisation d-flex flex-column">
                             <img alt="" src="img/icon-valorisation.png">
@@ -125,10 +125,10 @@
                             <p>Ton projet a une importance à tes yeux&nbsp;?</p>
                             <div class="separateur"></div>
                             <p>Pour nous aussi&nbsp;!</p>
-                            <img class="tiktok" alt="" src="img/tiktok_purple.svg"
-                                onclick="window.open('https://vm.tiktok.com/ZM8WadA2Y/')">
-                            <img class="tiktok" alt="" src="img/tiktok_yellow.svg"
-                                onclick="window.open('https://vm.tiktok.com/ZM8WaLA4T/')">
+                            <img class="tiktok" alt="logo_tiktok" src="img/tiktok_purple.svg"
+                                onclick="window.open(`https://vm.tiktok.com/ZM8WadA2Y/`)">
+                            <img class="tiktok" alt="logo_tiktok" src="img/tiktok_yellow.svg"
+                                onclick="window.open(`https://vm.tiktok.com/ZM8WaLA4T/`)">
                         </section>
                         <section class="accompagnement d-flex flex-column">
                             <img alt="" src="img/icon-accompagnement.png">
@@ -136,10 +136,10 @@
                             <p>Raconte-nous tes rêves les plus fous</p>
                             <div class="separateur"></div>
                             <p>On veut y participer&nbsp;!</p>
-                            <img class="tiktok" alt="" src="img/tiktok_purple.svg"
-                                onclick="window.open('https://vm.tiktok.com/ZM8WarR5e/')">
-                            <img class="tiktok" alt="" src="img/tiktok_yellow.svg"
-                                onclick="window.open('https://vm.tiktok.com/ZM8WaLA4T/')">
+                            <img class="tiktok" alt="logo_tiktok" src="img/tiktok_purple.svg"
+                                onclick="window.open(`https://vm.tiktok.com/ZM8WarR5e/`)">
+                            <img class="tiktok" alt="logo_tiktok" src="img/tiktok_yellow.svg"
+                                onclick="window.open(`https://vm.tiktok.com/ZM8WaLA4T/`)">
                         </section>
                     </div>
                 </section>
@@ -218,7 +218,7 @@
             <section class="footer-social-media">
                 <h2 class="titre titre-footer">Social Media</h2>
                 <div class="d-flex">
-                    <a href="https://www.facebook.com/profile.php?id=100075083631228" target="_blank"><img alt=""
+                    <a href="https://www.facebook.com/people/D%C3%A9clic/100075252804702/" target="_blank"><img alt=""
                             src="img/facebook.svg"></a>
                     <a href="https://www.instagram.com/declic.apef/" target="_blank"><img alt=""
                             src="img/instagram.svg"></a>
