--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="background"></div>
         <section id="rejoindre">
             <img alt="" src="img/illust_persoassis_1.png" class="illustration-flottante">
-            <div class="d-flex flex-column header-bg">
+            <div class="d-flex flex-column">
                 <h1 class="titre titre-violet">Rejoins Déclic et trouves ton chemin</h1>
                 <a class="cta cta-violet" onClick="return scrollToTarget('formulaire')" href="#">Abonne-toi</a>
                 <p class="more" href="">Viens te renseigner</p>
